substrate/frame/support/test/tests/pallet_ui/task_missing_list.stderr
error: missing `#[pallet::task_list(..)]` attribute
  --> tests/pallet_ui/task_missing_list.rs:33:6
   |
33 |         fn foo() -> DispatchResult {
   |            ^^^
